@@ -48,6 +48,19 @@ endif()
 if(NOT DEFINED CMAKE_EXE_LINKER_FLAGS)
     set(CMAKE_EXE_LINKER_FLAGS "${CFLAGS}" CACHE STRING "" FORCE)
 endif()
+
+if(NOT DEFINED BUILD_SHARED_LIBS)
+    set(BUILD_SHARED_LIBS ${CMAKE_SHARED_BOOL} CACHE BOOL "BUILD_SHARED_LIBS")
+endif()
+if(NOT DEFINED BUILD_STATIC_LIBS)
+    set(BUILD_STATIC_LIBS ${CMAKE_STATIC_BOOL} CACHE BOOL "BUILD_STATIC_LIBS")
+endif()
+if(NOT DEFINED BUILD_SHARED)
+    set(BUILD_SHARED ${CMAKE_SHARED_BOOL} CACHE BOOL "BUILD_SHARED")
+endif()
+if(NOT DEFINED BUILD_STATIC)
+    set(BUILD_STATIC ${CMAKE_STATIC_BOOL} CACHE BOOL "BUILD_STATIC")
+endif()
 EOF
 
             mkdir -p "${PREFIX}/bin"
